# our-voice

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  dc.dev-exemple  docker-compose.yml  package.json
.claude/agents/: devops-orchestrator.md  django-backend-developer.md  frontend-nextjs-developer.md  product-manager.md  qa-test-automation.md
.claude/commands/: commit.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  TESTING.md  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_deleted_at_user_is_deleted.py  0003_userfollow_user_following.py
backend/apps/accounts/tests/: test_authentication.py  test_models.py  test_views.py
backend/apps/interactions/: admin.py  models.py  serializers.py  views.py
backend/apps/interactions/migrations/: 0001_initial.py
backend/apps/interactions/tests/: test_models.py  test_views.py
backend/apps/moderation/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/moderation/migrations/: 0001_initial.py
backend/apps/moderation/tests/: test_models.py  test_regression_voting.py  test_views.py  test_voting_threshold.py
backend/apps/notifications/: admin.py  models.py  serializers.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/posts/: apps.py  consumers.py  models.py  permissions.py  serializers.py  signals.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_post_visibility.py
backend/apps/posts/tests/: test_archival.py  test_models.py  test_views.py
backend/config/: api_router.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/our_voice_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  factories.py  utils.py
frontend/: Dockerfile  README.md  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/components/: mode-toggle.tsx
frontend/src/components/auth/: auth-modal.tsx  login-form.tsx  protected-route.tsx  signup-form.tsx
frontend/src/components/feed/: feed-item.tsx  feed-scope-switcher.tsx  feed-tabs.tsx  moderation-banner.tsx  (+3 more)
frontend/src/hooks/: use-auth.ts  use-feed-posts.ts
frontend/src/lib/: api-client.test.ts  api-client.ts  api-error.ts  auth-service.ts  utils.test.ts
frontend/src/stores/: auth-store.ts  feed-store.test.ts  feed-store.ts
frontend/src/test/: setup.ts  simple.test.ts
frontend/src/types/: auth-types.ts  post-types.ts
(+20 files in other folders)
