[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "our-voice-backend"
version = "0.1.0"
description = "Backend services for OUR Voice"
requires-python = ">=3.10"
dependencies = [
  "Django>=5.2,<6.0",
  "djangorestframework>=3.16",
  "django-filter>=25.1",
  "channels>=4.3",
  "daphne>=4.2",
  "channels-redis>=4.3",
  "celery>=5.5",
  "redis>=6.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "whitenoise>=6.6",
  "Pillow>=11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
exclude = ["tests*", "static*", "templates*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "pytest-django>=4.11",
  "pytest-cov>=7.0",
  "factory-boy>=3.3",
  "model-bakery>=1.20",
  "ruff>=0.8",
  "faker>=37.8",
]

[tool.ruff]
select = ["E", "F", "I", "UP", "DJANGO"]
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--cov=apps",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
  "--strict-markers",
  "--disable-warnings",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
testpaths = ["apps", "tests"]

[tool.coverage.run]
source = ["apps"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/__init__.py",
  "*/admin.py",
  "*/apps.py",
  "*/settings/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
